--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@ PLUGIN_CONVERSION_STATUS.md
 CLAUDE.md
 README-Old.md
 scripts/
-scripts/**
 .version-backup-*/
 .rptc
+rptc-workflow/.rptc/
 
 # Version control
 .git/
@@ -39,6 +39,4 @@ build/
 __pycache__/
 
 # OS files
-.DS_Store
-Thumbs.db
 desktop.ini
